istio/istio-specs.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: httpserver
spec:
  gateways:
    - httpserver
  hosts:
    - cncamp.com
  http:
    - match:
        - port: 443
      route:
        - destination:
            host: httpserver.httpserver.svc.cluster.local
            port:
              number: 8080
---
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: httpserver
spec:
  selector:
    istio: ingressgateway
  servers:
    - hosts:
        - cncamp.com
      port:
        name: https-default
        number: 443
        protocol: HTTPS
      tls:
        mode: SIMPLE
        credentialName: cncamp-credential
